# stock-stop-signal

./: .env.example  .gitignore  README.md  docker-compose.yml
apps/admin-web/: README.md  package.json
apps/admin-web/app/: page.tsx
apps/api/: README.md  pyproject.toml
apps/api/sss_api/: __init__.py  main.py
apps/bot/: Dockerfile  README.md  pyproject.toml
apps/bot/sss/: market.py  notifier.py  service.py
apps/bot/tests/: test_calendar.py  test_market.py  test_strategy.py
infra/: docker-compose.yml
sss/: app.py  calendar.py  config.py  date_utils.py  db.py  service.py  strategy.py
tests/: test_date_utils.py  test_service_and_db.py
